<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navi_temperature"
            android:icon="@drawable/navi_temp"
            android:title="@string/naviTemperature" />
        <item
            android:id="@+id/navi_sickreport"
            android:icon="@drawable/navi_sickreport"
            android:title="@string/naviSickReport" />
        <item
            android:id="@+id/navi_alarm"
            android:icon="@drawable/navi_alarm"
            android:title="@string/naviAlarm" />
        <item
            android:id="@+id/navi_babyadd"
            android:icon="@drawable/navi_babyadd"
            android:title="@string/naviBabyList" />
        <item
            android:id="@+id/navi_setting"
            android:icon="@drawable/navi_setting"
            android:title="@string/naviSetting" />
    </group>



</menu>