<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="com.example.tacademy.abuband.Setting.SettingFragment"
    android:paddingTop="20dp">


    <Button
        android:id="@+id/btn_Setting_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="20sp"
        android:text="@string/settingAppVersion" />

    <Button
        android:id="@+id/btn_Setting_Band"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="left"
        android:textSize="20sp"
        android:text="@string/settingBandChange" />

    <Button
        android:id="@+id/btn_Setting_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="left"
        android:textSize="20sp"
        android:text="@string/settingAccount" />

    <Button
        android:id="@+id/btn_Setting_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="left"
        android:textSize="20sp"
        android:text="@string/settingTerms" />

    <Button
        android:id="@+id/btn_Setting_tempUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="left"
        android:textSize="20sp"
        android:text="@string/settingTempUnit" />

<!--    <Button
        android:id="@+id/btn_Setting_sickReportBackUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="left"
        android:textSize="20sp"
        android:text="@string/settinfSickReportBackUp" />-->

    <Button
        android:id="@+id/btn_Setting_menual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="left"
        android:textSize="20sp"
        android:text="@string/settingMenual" />

    <Button
        android:id="@+id/btn_Setting_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="left"
        android:textSize="20sp"
        android:text="@string/settingHelp" />
</LinearLayout>
