<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dnabuba.tacademy.abuband.Member.MemberActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="@dimen/inner_bg_width"
        android:layout_height="@dimen/inner_bg_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/member_margin_top"
        android:background="@drawable/inner_bg_login"
        android:paddingBottom="30dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingTop="130dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/edit_eMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="이메일주소"
                android:singleLine="true"
                android:textSize="@dimen/base_text_size"
                android:text="xpzkaos_@naver.com" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_login"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="비밀번호"
                android:text="1234"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/base_text_size" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/Login_btn"
            android:textSize="@dimen/base_text_size"
            android:background="@drawable/selector_button"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/text_memberAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memberAdd"
            android:textSize="@dimen/base_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:id="@+id/textView10"
            android:textSize="30sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp" />

        <TextView
            android:id="@+id/text_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="@dimen/base_text_size" />

    </LinearLayout>

</RelativeLayout>

